deploy/httpbin/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: httpbin
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: httpbin
data:
  config.yaml: |
    node:
      id: "${POD_NAME}"
      cluster: proxy
      locality:
        region: "${REGION}"
        zone: "${ZONE}"
    admin:
      access_log: []
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
        - name: metrics
          address:
            socket_address:
              protocol: TCP
              address: 0.0.0.0
              port_value: 9091
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: prometheus
                    route_config:
                      virtual_hosts:
                        - name: prometheus
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: /stats/prometheus
                              route:
                                cluster: envoy-admin
                      validate_clusters: true
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        - name: httpbin
          address:
            socket_address:
              protocol: TCP
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: httpbin
                    route_config:
                      virtual_hosts:
                        - name: httpbin
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: httpbin:upstream:http
                      validate_clusters: false
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: envoy-admin
          connect_timeout: 0.25s
          type: STATIC
          load_assignment:
            cluster_name: envoy-admin
            endpoints:
              lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 9901
        - name: ekglue
          type: STRICT_DNS
          lb_policy: RANDOM
          connect_timeout: 1s
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          upstream_connection_options:
            tcp_keepalive: {}
          load_assignment:
            cluster_name: ekglue
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ekglue.discovery.svc.cluster.local.
                          port_value: 9000
    dynamic_resources:
      cds_config:
        resource_api_version: V3
        api_config_source:
          api_type: GRPC
          transport_api_version: V3
          grpc_services:
            - envoy_grpc:
                cluster_name: ekglue
