deploy/httpbin/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: httpbin
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/part-of: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/component: proxy
        app.kubernetes.io/part-of: httpbin
    spec:
      initContainers:
        - name: envsubst
          image: gcr.io/high-codex-314318/envsubst:latest
          env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          command:
            - /bin/sh
            - -c
            - |
              # ZONE_URL=http://metadata.google.internal/computeMetadata/v1/instance/zone
              # export ZONE=$(wget --header="Metadata-Flavor: Google" "$ZONE_URL" | sed -E 's|(.*/)?([^/]*)|\2|')
              # export REGION=$(echo $ZONE | sed -E 's|(.*)-([^-]*)|\1|')
              cat /etc/envoy/raw/config.yaml | envsubst | tee /etc/envoy/out/config.yaml
          volumeMounts:
            - name: raw-config
              mountPath: /etc/envoy/raw
            - name: out-config
              mountPath: /etc/envoy/out
      containers:
        - name: envoy
          image: docker.io/envoyproxy/envoy:v1.24.0
          command:
            - envoy
            - -c
            - /etc/envoy/config.yaml
          ports:
            - name: http
              containerPort: 8080
            - name: http-admin
              containerPort: 9901
            - name: http-metrics
              containerPort: 9091
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: out-config
              mountPath: /etc/envoy
      volumes:
        - name: raw-config
          configMap:
            name: envoy-config
        - name: out-config
          emptyDir: {}
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
