deploy/httpbin/httpbin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: upstream
    app.kubernetes.io/part-of: httpbin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
      app.kubernetes.io/component: upstream
      app.kubernetes.io/part-of: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/component: upstream
        app.kubernetes.io/part-of: httpbin
    spec:
      containers:
        - name: httpbin
          image: docker.io/mccutchen/go-httpbin:v2.4.2
          imagePullPolicy: Always
          env:
            - name: PORT
              value: "8080"
            - name: USE_REAL_HOSTNAME
              value: "true"
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 128Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
