deploy/httpbin/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  namespace: httpbin
  annotations:
    cert-manager.io/cluster-issuer: zerossl-cluster-issuer-dev-alcfd-com
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: httpbin
spec:
  ingressClassName: ingress-controller-internal
  rules:
    - host: xds-demo-proxy.dev-alcfd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  name: http
  tls:
    - hosts:
        - xds-demo-proxy.dev-alcfd.com
      secretName: proxy-tls
