deploy/httpbin/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: httpbin
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: httpbin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/component: proxy
    app.kubernetes.io/part-of: httpbin
